--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
     <header>
-        Cordel Moderno
-        Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+        <h1>
+            Cordel Moderno
+        </h1>
+
+        <p>
+            Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
+        </p>
+
     </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia <br>
@@ -25,7 +31,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes <br>
             É tudo abreviado <br>
@@ -37,7 +43,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal"> 
         <p>
             Arroba agora não pesa <br>
             É parte de um endereço <br>
@@ -46,7 +52,10 @@
             Agora é .com <br>
             Se o saite é muito bom <br>
             Ele vale um alto preço. <br>
-            Pra piorar a liguagem <br>
+        </p>
+
+        <p> 
+            Pra piorar a linguagem <br>
             O emoticom é um risco <br>
             Tem símbolo para tudo <br>
             Ponto e vírgula e um asterisco <br>
@@ -56,7 +65,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -68,7 +77,7 @@
         </p>
     </section>
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
@@ -77,6 +86,9 @@
             Abriu outro aplicativo <br>
             O mundo ficou cativo <br>
             Da tecnologia do agora. <br>
+        </p>
+
+        <p>
             Felizmente, pra orar <br>
             Não precisa de internet <br>
             Deus escuta todo mundo <br>
