atualização do footer

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </section>
 
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://cursoemvideo.com" target="_blank">CursoemVideo</a></p>
+        <p>Site criado por <a href="https://github.com/vinicius-mouzinho">Vinícius Mouzinho</a> através do guia do <a href="https://gustavoguanabara.github.io" target="_blank">Gustavo Guanabara</a> para o <a href="https://cursoemvideo.com" target="_blank">CursoemVideo</a></p>
     </footer>
 </body>
 </html>
